--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,12 @@ a {
   display: flex;
 }
 
+@media screen and (max-width: 768px) {
+  .btn {
+    padding: 0.5rem 1rem;
+  }
+}
+
 .hero-card {
   display: flex;
   flex-direction: column;
@@ -173,6 +179,99 @@ a {
   line-height: 1.4;
 }
 
+/* * form */
+
+.input-material {
+  position: relative;
+}
+
+.input-material input {
+  width: 100%;
+  border: 2px solid #c0c0c0;
+  border-radius: 0.5rem;
+
+  padding: 1.2rem 2rem;
+}
+
+.input-material .label {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 16px;
+  display: flex;
+  align-items: center;
+  pointer-events: none;
+}
+
+.input-material .label .text {
+  transition: all 0.15s ease-out;
+  color: grey;
+}
+
+.input-material input:focus {
+  outline: none;
+  border: 2px solid var(--color-blue);
+}
+
+.input-material input:focus + .label .text,
+.input-material :not(input[value=""]) + .label .text {
+  font-size: 12px;
+  transform: translate(0, -115%);
+  background-color: white;
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+.input-material input:focus + .label .text {
+  color: var(--color-blue);
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.form__row {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
+}
+
+.form__col {
+  display: flex;
+  flex-direction: column;
+  flex: 1 0 0;
+  gap: 0.5rem;
+}
+
+.form__col > p {
+  margin: 0;
+}
+.form__col > .select-city {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#form select {
+  width: 100%;
+  border: 2px solid #c0c0c0;
+  border-radius: 0.5rem;
+  padding: 1.2rem 2rem;
+  font-size: 1.4rem;
+}
+
+#form .btn {
+  align-self: flex-start;
+}
+
+@media screen and (max-width: 768px) {
+  .form__row {
+    flex-direction: column;
+  }
+}
+
 /* * header */
 
 #header {
@@ -212,12 +311,32 @@ a {
   cursor: pointer;
 }
 
+.toggle-menu {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
   #navbar {
     width: var(--mobile-width);
+    gap: 1rem;
+  }
+  .logo-link {
+    width: 10rem;
   }
   .header-menu {
     display: none;
+  }
+  .profile-btn {
+    display: none;
+  }
+
+  .toggle-menu {
+    display: flex;
+    width: 2.5rem;
+    aspect-ratio: 1;
+  }
+  .toggle-menu > svg {
+    fill: var(--color-gray);
   }
 }
 
@@ -394,6 +513,12 @@ a {
   color: var(--color-light-text);
 }
 
+@media screen and (max-width: 768px) {
+  .register-row__wrapper {
+    width: var(--mobile-width);
+  }
+}
+
 /* * home sponsers */
 
 .home-sponsers {
@@ -496,9 +621,24 @@ a {
   .home-photos {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto;
+    width: var(--mobile-width);
   }
 
   .home-photos > img {
     grid-area: auto !important;
+  }
+}
+
+/* * form page */
+
+.form-sec {
+  width: var(--width);
+  max-width: var(--max-width);
+  align-self: center;
+}
+
+@media screen and (max-width: 768px) {
+  .form-sec {
+    width: var(--mobile-width);
   }
 }
