--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,26 @@ a {
   margin-top: auto;
 }
 
+@media screen and (max-width: 768px) {
+  .hero-card__img {
+    aspect-ratio: 4/3;
+  }
+
+  .hero-card__content {
+    top: 6rem;
+    bottom: auto;
+    left: 5rem;
+  }
+
+  .hero-card__title {
+    font-size: 2rem;
+  }
+
+  .hero-card__text {
+    display: none;
+  }
+}
+
 /* * stats card */
 
 .stats-card {
@@ -317,16 +337,58 @@ a {
 
 @media screen and (max-width: 768px) {
   #navbar {
-    width: var(--mobile-width);
+    width: 100%;
+    padding-inline: 4%;
     gap: 1rem;
+    position: relative;
+    flex-wrap: wrap;
   }
   .logo-link {
     width: 10rem;
+    order: 1;
   }
   .header-menu {
+    order: 5;
+    width: 100%;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    z-index: 10;
+    right: 0;
+    background-color: white;
+    align-items: stretch;
+    gap: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.25s;
+  }
+
+  .header-menu.open {
+    max-height: 50vh;
+  }
+
+  .header-menu > li {
+    display: flex;
+  }
+
+  .header-menu a {
+    padding: 1.5rem;
+    width: 100%;
+    text-align: center;
+  }
+
+  #header .btn.btn--gray {
+    order: 2;
+  }
+  #header .btn:last-child {
+    order: 2;
+  }
+
+  .profile-btn {
     display: none;
   }
-  .profile-btn {
+
+  .header-menu > li:last-child {
     display: none;
   }
 
@@ -334,6 +396,7 @@ a {
     display: flex;
     width: 2.5rem;
     aspect-ratio: 1;
+    order: 4;
   }
   .toggle-menu > svg {
     fill: var(--color-gray);
@@ -414,6 +477,10 @@ a {
     flex-direction: column;
     width: var(--mobile-width);
   }
+
+  .footer-social__link:first-of-type {
+    margin-inline-start: auto;
+  }
 }
 
 /* ! pages */
@@ -476,9 +543,9 @@ a {
 
 @media screen and (max-width: 768px) {
   .home-stats {
-    flex-direction: column;
-    align-items: flex-end;
-    padding-inline-end: 10rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-inline-end: 10%;
     gap: 2rem;
     width: var(--mobile-width);
   }
@@ -548,8 +615,15 @@ a {
 }
 
 @media screen and (max-width: 768px) {
+  .home-sponsers {
+    width: var(--mobile-width);
+  }
   .home-sponsers__wrapper {
-    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .home-sponsers__wrapper > img {
+    width: calc(50% - 1rem);
   }
 }
 
