add complete register page

--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,32 @@ a {
   align-self: flex-start;
 }
 
+.form__avatar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 50%;
+  background-color: rgb(203, 203, 203);
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+
+.form__avatar-icon {
+  width: 3rem;
+}
+
+.form__avatar-img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  object-fit: cover;
+}
+
 @media screen and (max-width: 768px) {
   .form__row {
     flex-direction: column;
